# Nutrease

./: .gitignore  .pre-commit-config.yaml  README.md  build.gradle.kts  gradle.properties  local.properties.template  nutrease_db.json  pytest.ini  requirements.txt  settings.gradle.kts  setup.cfg  streamlit_app.py
.devcontainer/: devcontainer.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/nutrease/: MainActivity.kt  (+1 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
data/: alimentazione_demo.csv
docs/: architecture.md  backlog.md  glossario.md  patterns.md  requirements.md  setup.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nutrease/controllers/: enums.py  messaging_controller.py  patient_controller.py  specialist_controller.py
nutrease/models/: communication.py  diary.py  enums.py  record.py  user.py
nutrease/services/: auth_service.py  dataset_service.py  notification_service.py
nutrease/ui/: i18n.py  sidebar.py
nutrease/ui/pages/: 1_login.py  2_patient_diary.py  3_specialist_dashboard.py  login.py  messaging.py  patient_diary.py  patient_specialists.py  profile.py  specialist_dashboard.py
nutrease/utils/: database.py  tz.py
scripts/: README.md  bootstrap.py  check-domain-purity.sh  demo_accounts.csv  seed_auth_users.py
sql/: alimento_seed.sql  nutreaseDatabase.sql
tests/: test_auth_service.py  test_controllers.py  test_models.py  test_password_validation.py
(+220 files in other folders)
