[metadata]
name = nutrease
version = 0.1.0
description = "Web app per la gestione di diari alimentari e comunicazione paziente-specialista"
author = "Nutrease Team"
license = MIT

[options]
python_requires = >=3.10
packages = find:
include_package_data = True
install_requires =
-r requirements.txt

[options.package_data]

= *.csv, *.json, *.yaml

[mypy]
python_version = 3.10
strict = True
plugins = pydantic.mypy
show_error_codes = True
ignore_missing_imports = True

[tool:isort]
profile = black
line_length = 88

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[tool:pytest]
addopts = -ra -q
filterwarnings =
ignore::DeprecationWarning

